<resources>
    <string name="app_name">RoadLab Pro</string>
    <string name="action_settings">Settings</string>
    <string name="device_shaken">Device shaken!</string>
    <string name="app_description">App for road condition reporting</string>
    <string name="ac_menu_start_stop_road_detection">Algorithm for road condition detection</string>
    <string name="ac_menu_export_data">Export of data to spreadsheet</string>
    <string name="print_send_email_subject">Quality road</string>
    <string name="title_menu_add_new_issue">Add New Issue</string>
    <string name="title_menu_issue_detection">Issue Detection</string>
    <string name="title_menu_my_records">My Records</string>
    <string name="title_menu_settings">Settings</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_measurement">Links</string>
    <string name="title_menu_new_line_measurement">Measurement</string>
    <string name="title_issue_detection">Issue Detection</string>
    <string name="title_my_records">My Records</string>
    <string name="title_my_records_details">My Record Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_user_manual">Application manual</string>
    <string name="title_alg_settings">Algorithm Settings</string>
    <string name="title_about">About</string>
    <string name="start_recording">START</string>
    <string name="stop_recording">STOP</string>
    <string name="default_folder_name">Default project</string>
    <string name="default_road_name">Default road</string>
    <string name="sync_data_save_local">The data is stored locally. Synchronization is disabled.</string>
    <string name="sync_data_start_issue_problems">Launched synchronize data.</string>
    <string name="sync_data_succeed">Syncing data with Server was Succeed.</string>
    <string name="sync_no_data_succeed">No data to sync.</string>
    <string name="sync_data_error">Error syncing data with Server.</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="title_fr_about_version">Version %1$s</string>
    <string name="title_fr_about_send_feedback">SEND FEEDBACK</string>
    <string name="title_fr_about_app_better">We welcome your suggestions\nto further improve this product.</string>
    <string name="title_fr_about_privacy_policy">PRIVACY POLICY</string>
    <string name="title_fr_about_show_tutorial">Show tutorial</string>
    <string name="title_fr_about_show_app_manual">Show application manual</string>
    <string name="title_fr_about_copyright">© 2016 World Bank</string>
    <string name="summary_vertical_acceleration_value">%1$s m/s^2</string>
    <string name="measurement_datetime">Actual time: %1$s</string>
    <string name="duration_actual_value">Duration: %1$s</string>
    <string name="accelerometer_actual_value">Accelerometer X Y Z, m/s^2:\n%1$s</string>
    <string name="accelerometer_linear_value">Linear X Y Z, m/s^2:\n%1$s</string>
    <string name="accelerometer_gravity_value">Gravity X Y Z, m/s^2:\n%1$s</string>
    <string name="rotation_vector_value">Rotation angle (%1$s s), degree: %2$s</string>
    <string name="device_not_fixed">WARNING! DEVICE NOT FIXED!\nRotation angle (%1$s s), degree: %2$s</string>
    <string name="speed_actual_value">Actual speed, km/hour: %1$s</string>
    <string name="speed_calc_value">Accelerometer speed calc value %1$s km/hour</string>
    <string name="gps_accuracy">Accuracy: %1$s</string>
    <string name="gps_distance">Actual distance, m: %1$s</string>
    <string name="html_text_color_str">&lt;font color=\'%1$s\'&gt;%2$s&lt;/font&gt;</string>
    <string name="distance_format">%2.0f m</string>
    <string name="speed_format">%2.0f km/h</string>
    <string name="accelerometer_data_title">ACCELEROMETER DATA</string>
    <string name="gps_data_title">GPS DATA</string>
    <string name="sleep_mode_title">SLEEPING MODE</string>
    <string name="auto_roughness_detection_title">AUTOMATIC ROAD ROUGHNESS CONDITION DETECTION</string>
    <string name="calculate_button_str">Calculate</string>
    <string name="distance_value_str">Distance: %1$s km</string>
    <string name="average_speed_value_str">Average Speed: %1$s km/h</string>
    <string name="speed_format_str">%1$s km/h</string>
    <string name="road_quality_value_str">Road Quality: %1$s</string>
    <string name="time_value_str">Time: %1$s</string>
    <string name="number_100m_intervals_value_str">Number of 100 meter intervals: %1$s</string>
    <string name="number_bump_events_value_str">Number of bump events: %1$s</string>
    <string name="standard_deviation_value_str">Standard Deviation: %1$s</string>
    <string name="sync_data_str">Sync data to server</string>
    <string name="ftp_upload">FTP upload</string>
    <string name="edit_details">Edit Details</string>
    <string name="send_csv_data_str">Send measured data into CSV format</string>
    <string name="show_processed_items_str">Show calculated data items list</string>
    <string name="hide_processed_items_str">Hide calculated data items list</string>
    <string name="allow_gps_text">GPS sensor is disabled. Would you like to enable it?</string>
    <string name="yes_button_txt">Yes</string>
    <string name="no_button_txt">No</string>
    <string name="ok_btn_txt">OK</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="export_finished">Export has been finished</string>
    <string name="ftp_error">FTP error! Sending via email</string>
    <string name="export_finished_Ftp">Uploading results to FTP</string>
    <string name="ftp_uploading_done">FTP uploading done</string>
    <string name="google_maps_key">AIzaSyB0eK89KIDgv9OGrCcc6rvzCMqjI1JkYaI</string>
    <string name="show_map">show map</string>
    <string name="confirm_measurement_details">Confirm Measurement details</string>
    <string name="non_editable_warning">Sorry, this measurement detail is not editable for now. To be implemented</string>
    <string name="run_number_title">Run number: %1$s</string>
    <string name="road_segment_id_title">Road Segment ID: %1$s</string>
    <string name="max_speed_value_str">Selected Speed: %1$s km/h</string>
    <string name="title_activity_maps">Reported issues</string>
    <string name="image_description_my_report">my_report</string>
    <string name="image_description_about">actionbar_about</string>
    <string name="image_description_add_new">add_new</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_menu_road_issue">Road Safety Issues</string>
    <string name="title_menu_my_issues">My reportings</string>
    <string name="title_menu_quick_start">Quick start</string>
    <string name="title_menu_new_project">New project</string>
    <string name="title_menu_new_road">New road</string>
    <string name="title_menu_select_project">Select Project/Road</string>
    <string name="title_menu_tags">Tags</string>
    <string name="title_menu_projects">Projects</string>
    <string name="title_menu_roads">Roads</string>
    <string name="title_menu_employee_signin">Employee Sign In</string>
    <string name="title_menu_signin">Sign In</string>
    <string name="title_menu_issue_details">Issue Details</string>
    <string name="title_menu_tag_details">Tag Details</string>
    <string name="title_menu_report_issue">Report Issue</string>
    <string name="title_menu_header_project">Project: </string>
    <string name="title_menu_header_road">Road: </string>
    <string name="title_menu_header_distance">Distance: </string>
    <string name="message_dialog_loading">Loading...</string>
    <string name="message_dialog_sending">Sending...</string>
    <string name="title_tab_map">Map</string>
    <string name="title_tab_list">List</string>
    <string name="progressLoginGoogle">Contacting Google ...</string>
    <string name="title_fr_login_transport_ministry">If you are from road management agencies, please log in.</string>
    <string name="title_fr_login_please_signin">Please, sign in</string>
    <string name="title_fr_login_without_signin">or start without sign in</string>
    <string name="title_fr_login_signin">SIGN IN</string>
    <string name="title_fr_login_regular_user">I am a regular user</string>
    <string name="label_fr_login_email">E-mail</string>
    <string name="label_fr_login_password">Password</string>
    <string name="title_fr_settings_load_data_to_dropbox">EXPORT DATA</string>
    <string name="title_fr_settings_reset">RESET ALL DATA</string>
    <string name="title_ac_help_skip">Skip</string>
    <string name="title_fr_report_send_report">Report</string>
    <string name="title_fr_report_add_least_photo">AT LEAST ONE</string>
    <string name="title_fr_report_add_photo">ADD PHOTOS</string>
    <string name="title_fr_report_add_details">ADD ISSUE DETAILS</string>
    <string name="label_fr_report_add_notes">Add notes</string>
    <string name="label_fr_report_issue_type">Select issue type</string>
    <string name="label_fr_report_road_condition">Select road condition</string>
    <string name="message_dialog_no_internet">No connection to the Internet. Do you want to keep the issue locally?</string>
    <string name="message_dialog_change_picture">To change the image, remove the old</string>
    <string name="message_dialog_no_correct_filled_data">One or more fields filled incorrectly, please check you input</string>
    <string name="title_email_chooser_send_feedback">Send feedback</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="off">Off</string>
    <string name="soft">Soft-medium</string>
    <string name="medium">Hard-medium</string>
    <string name="hard">SUV</string>
    <string name="save_to_device">Export to device</string>
    <string name="save_to_dropbox">Export to %1$s</string>
    <string name="intervals">Intervals</string>
    <string name="bumps">Bumps</string>
    <string name="tags">Tags</string>
    <string name="always">Always</string>
    <string name="reset_all_data">All data reset</string>
    <string name="synchronize">Synchronize</string>
    <string name="suspension_type">Suspension type</string>
    <string name="sync_data_type">Sync data type</string>
    <string name="export_title_dialog">Export data</string>
    <string name="select_filter">Select Filter</string>
    <string name="time_interval">Time interval</string>
    <string name="thresholds">Thresholds</string>
    <string name="less_thresholds">Thresholds (&lt;50 km/h)</string>
    <string name="more_thresholds">Thresholds (&gt;50 km/h)</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="no">No</string>
    <string name="title_intent_open_gallery">Image from Gallery</string>
    <string name="export_all_str">Export All Records to CSV</string>
    <string name="export_all_progress_str">Exporting All Records to CSV...</string>
    <string name="export_all_progress_info_str">%1$d of %2$d processed</string>
    <string name="export_complete_str">Export data procedure completed</string>
    <string name="export_cancel_prompt_str">Do you want to cancel exporting data?</string>
    <string name="email_data_subject_text">Exported data of \"%1$s\"</string>
    <string name="measurement_in_progress_warning_text">Current measurement session is still active.\n\nDo you want to close it?</string>
    <string name="delete_all_data_folder_str">Attention,\nall collected data will be deleted from your device.\nDo you wish to continue?</string>
    <string name="delete_folder_str">Do you really want to delete folder %1$s ?</string>
    <string name="save">Save</string>
    <string name="ms_500">500ms</string>
    <string name="ms_300">300ms</string>
    <string name="ms_200">200ms</string>
    <string name="ms_100">100ms</string>
</resources>