<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roadapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_sync"
        android:title="@string/sync_data_str"
        android:visible="false"
        roadapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_action_send"
        android:title="@string/send_csv_data_str"
        roadapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ftp_upload"
        android:icon="@drawable/upload"
        android:title="@string/ftp_upload"
        roadapp:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit"
        android:title="@string/edit_details"
        roadapp:showAsAction="ifRoom" />
</menu>