<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:context="com.softteco.roadlabpro.fragment.LoginFragment"
        android:orientation="vertical">

        <com.softteco.roadlabpro.view.TypefaceTextView
            android:id="@+id/fr_login_title_transport_ministry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_fr_login_transport_ministry"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:font="fonts/Roboto-Light.ttf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/fr_login_information_layout">

            <EditText
                android:id="@+id/fr_login_value_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/line_location_notes"
                android:ems="10"
                android:hint="@string/label_fr_login_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/fr_login_value_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/fr_login_value_email"
                android:layout_alignStart="@+id/fr_login_value_email"
                android:layout_below="@+id/fr_login_value_email"
                android:background="@drawable/line_location_notes"
                android:ems="10"
                android:hint="@string/label_fr_login_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_alignRight="@+id/fr_login_value_email"
                android:layout_alignEnd="@+id/fr_login_value_email"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:layout_marginBottom="30dip"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <com.softteco.roadlabpro.view.CustomButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_fr_login_signin"
                android:id="@+id/fr_login_btn_signin"
                android:background="@drawable/button_blue_selected"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                app:font="@string/font_roboto_medium"/>
        </FrameLayout>

    </LinearLayout>
</ScrollView>