<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_weight="70"
        android:orientation="vertical"
        android:layout_toLeftOf="@+id/my_records_list_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/my_records_list_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="12-12-2015" />

        <TextView
            android:id="@+id/my_records_list_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/runNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/run_number_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/roadSegmentIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/road_segment_id_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/selectedSpeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/max_speed_value_str"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/my_records_list_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_gravity="top"
        android:ellipsize="end"
        android:gravity="right"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        android:text="12-12"
        android:layout_marginRight="20dp" />
</RelativeLayout>